# mm

./: .gitattributes  .gitignore  .pre-commit-config.yaml  260413-output.txt  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  EXAMPLES.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SPEC.md  USE-CASES.md  USER_GUIDE.md  deny.toml  index.html  install.ps1  install.sh  invoices.csv  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  vlmctx-cli-skill.skill
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-tag.yml  benchmark.yml  ci.yml  deploy-web.yml  docs.yml  model-price-catalog.yml  model-pricelist.yml  publish.yml
BENCH_COMMAND/: index.html
CAT_COMMAND/: index.html
ENCODERS/: index.html
FIND_COMMAND/: index.html
FIXTURES/: index.html
GREP_COMMAND/: index.html
MM_CLI/: index.html
MM_CONFIG/: index.html
PEEK_COMMAND/: index.html
PIPELINES/: index.html
PROFILE_MANAGEMENT/: index.html
ROADMAP/: index.html
SQL_COMMAND/: index.html
USER_GUIDE/: index.html
USE_CASES/: index.html
WC_COMMAND/: index.html
api/: index.html
bench/: index.html
benchmark/: 260418-video-encoders.md  260429-post-p0-cold.json  260429-post-p0-video-encoders.md  260429-rebased-video-encoders-perf-plan.md  260429-rebased-video-encoders.md
benchmarks/: 260501-mm-bench-vlmgw.md  260501-vlmgw-bench.md  _multi_image_call.py  bench_cli.sh  bench_cli_mini.sh  bench_cli_mini_metadata.sh  bench_cli_tiny.sh  bench_cli_tiny_metadata.sh  bench_cli_universal_assistant.sh  bench_cli_universal_assistant_image.sh  bench_image_modes.json  bench_modes.py  bench_modes.sh  bench_pdf.json  bench_video_modes.json  mm-bench-260321.json  mm-bench-260321.md  mm-bench-260321.txt  mm-bench-260322.json  mm-bench-260322.md  mm-bench-260322.txt  mm-bench-fixtures.md  vlmgw_bench_commands.py
benchmarks/260321/: bench_mmbench_mini.json  bench_mmbench_mini.txt
benchmarks/bench_internal/: bench_metadata_mini.sh  bench_metadata_tiny.sh  bench_mini.sh  bench_tiny.sh
benchmarks/bench_universal/: bench_universal.sh  bench_universal_image.sh  bench_universal_tiny.sh  bench_universal_tiny_extractions.sh  bench_universal_tiny_metadata.sh
benchmarks/results/: 260418-video-encoders.md  260421-pyav-videoreader.md  260429-mm-bench-fast.json  260429-post-p0-cold.json  260429-post-p0-video-encoders.md  260429-post-p0-warm.json  260429-rebased-video-encoders-perf-plan.md  260429-rebased-video-encoders.json  260429-rebased-video-encoders.md  260501-bench-vlmgw.md  260501-mm-bench-vlmgw.md  260502-mm-bench-vlmgw-1235.md  260502-mm-bench-vlmgw.md  mm-bench-260321.md  mm-bench-260322.md
benchmarks/universal_cli/: visualize_universal.py
cat/: index.html
cli/: index.html
config/: config.example.toml  index.html  profile.example.toml
crates/mm-core/: Cargo.toml
crates/mm-core/benches/: detect.rs  fast_extract.rs  find_filter.rs  hash_extended.rs  hash_strategies.rs  l0_index.rs  l0_walk.rs  l1_extract.rs  metadata_extract.rs  metadata_index.rs  metadata_walk.rs  refs.rs  wc.rs
crates/mm-core/src/: cache.rs  detect.rs  extract.rs  format.rs  hash.rs  lib.rs  meta.rs  office.rs  refs.rs  schema.rs  table.rs  walk.rs  wc.rs
crates/mm-core/src/extractors/: audio.rs  code.rs  document.rs  image.rs  mod.rs  shared.rs  video.rs
crates/mm-core/src/serde/: gemini.rs  image.rs  mod.rs  vlmrun.rs
crates/mm-python/: Cargo.toml
crates/mm-python/src/: lib.rs  refs.rs
crates/vlmctx-core/: Cargo.toml
crates/vlmctx-python/: Cargo.toml
dev/bench/: data.js
dev/metrics/: index.html
docs/: 2026-04-12.md  AUDIT-2026-04-14.md  BENCHMARK-FIXTURES.md  BENCH_COMMAND.md  CAT_COMMAND.md  ENCODERS.md  FIXTURES.md  GREP_COMMAND.md  MM_CLI.md  MM_CONFIG.md  PEEK_COMMAND.md  PIPELINES.md  ROADMAP.md  SPEC.md  USE-CASES.md  USER-GUIDE.md  USER_GUIDE.md  USE_CASES.md  WC_COMMAND.md  api.md  cat.md  cli.md  config.md  encoders.md  examples.md  find.md  fixtures.md  grep.md  mm-context.md  mm-encoders.html  peek.md  pipelines.md  profile.md  sql.md  use-cases.md  use_cases.tmp.md  user-guide.md
docs/blog/: index.html  mm-encoders.html
docs/intro/: index.html  package.json
docs/rfcs/: 001-multimodal-dsl.md
docs/spec/: SPEC.md  cat.md  cli-use.md
docs/stylesheets/: extra.css
encoders/: index.html
find/: index.html
fixtures/: index.html
gradio_app/: Dockerfile  Makefile  README.md  __init__.py  app.py  config.py  data_setup.py  design.py  main.py  models.py  requirements.txt  routes.py  spaces_app.py  theme.py  ui.py
grep/: index.html
install/: install.ps1  install.sh
install/0.11.0b/: SHA256SUMS
install/0.12.0b/: SHA256SUMS
install/0.12.4b/: SHA256SUMS
install/0.13.2/: SHA256SUMS
install/0.5.0c/: SHA256SUMS
install/0.7.1b/: SHA256SUMS
install/0.7.2b/: SHA256SUMS
install/0.7.4b/: SHA256SUMS
install/0.8.0b/: SHA256SUMS
install/latest/: SHA256SUMS
install/simple/: index.html
intro/: index.html
intro/assets/: Cookbook-BA2D3rPi.js  Cookbook-BFYacFF_.js  Cookbook-CkYxzIwO.js  Cookbook-Cqi25TnX.js  Cookbook-O3C3boLt.js  Cookbook-vbsYjMNl.js  GettingStarted-BUBxrv92.js  GettingStarted-BkBPJaJ-.js  Landing--1ED11Bj.js  Landing-BMVky6gq.js  Landing-C3q6d7RZ.js  (+13 more)
metrics/: .gitignore  index.html  package-lock.json  vite.config.js
mm-context/: index.html
mm_context/: index.html
mmbench/: .gitignore  DESIGN.md  README.md  __init__.py  conftest.py  requirements.txt
mmbench-agents/: .gitignore  README.md  conftest.py  requirements.txt
notebooks/: mm-context-api.ipynb  mm-context-viz.ipynb  mm_cookbook.ipynb  mm_cookbook_gateway.ipynb  mm_notebook_showcase.ipynb
peek/: index.html
pipelines/: index.html
profile/: index.html
readme/: index.html
road-map/: index.html
scripts/: bench_db_writes.py  bench_video_encoders.py  docs_hooks.py  preview-readme.sh  test_encoders.py  write_release_metadata.py
search/: search_index.json
sql/: index.html
tests/: playground_embed.py
use-cases/: index.html
user-guide/: index.html
wc/: index.html
(+477 files in other folders)
