[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "mm"
version = "0.5.0"
description = "High-performance multimodal context management library"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "polars>=1.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "sqlite-vec>=0.1.9",
    "pypdfium2>=4.0",
    "Pillow>=10.0",
    "openai>=1.0",
    "tomli>=1.0; python_version < '3.11'",
    "python-docx==1.2.0",
    "python-pptx>=1.0.2",
    "pyyaml>=6.0",
    "faster-whisper>=1.0",
    "scenedetect[opencv]>=0.6",
    "docling>=2.0",
    "ctranslate2>=2.0",
]

[project.scripts]
mm = "mm.cli:app"

[project.optional-dependencies]
gemini = [
    "google-genai>=1.0",
]
mlx = [
    "mlx>=0.31.1",
    "lightning-whisper-mlx>=0.0.10",
]
experimental = [
    "datasets>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "ty>=0.0.28",
    "ruff>=0.4",
    "pre-commit>=4.0",
    "maturin>=1.7",
]
all = [
    "mm[gemini]",
    "mm[mlx]; sys_platform == 'darwin'",
]

[tool.maturin]
python-source = "python"
module-name = "mm._mm"
manifest-path = "crates/mm-python/Cargo.toml"
features = ["pyo3/extension-module"]
# Ship built-in YAML pipelines alongside the Python package so
# `pip install mm` can load them at runtime without the source tree.
include = [
    { path = "python/mm/pipelines/**/*.yaml", format = ["sdist", "wheel"] },
]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
markers = [
    "integration: slow integration tests that need external services (deselect with '-m not integration')",
    "slow: resource-intensive tests such as pytest-benchmark suites (deselect with '-m not slow')",
]
# Default CI run executes only the fast tier. Run the full suite with
# `pytest -m ''` or `make test-python-full`.
addopts = "-m 'not integration and not slow'"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ty.environment]
python-version = "3.10"

[tool.ty.rules]
# Start with warnings for gradual adoption
possibly-missing-attribute = "warn"
unresolved-import = "warn"
