[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "mm-ctx"
version = "0.5.3"
description = "High-performance multimodal context management library"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "polars>=1.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "sqlite-vec>=0.1.9",
    "pypdfium2>=4.0",
    "Pillow>=10.0",
    "openai>=1.0",
    "python-docx==1.2.0",
    "python-pptx>=1.0.2",
    "pyyaml>=6.0",
    "google-genai>=1.0",
    "faster-whisper>=1.0",
    "scenedetect[opencv]>=0.6",
    "ctranslate2>=2.0",
]

[project.scripts]
mm = "mm.cli:app"

[project.optional-dependencies]
mlx = [
    "mlx>=0.31.1",
    "lightning-whisper-mlx>=0.0.10",
]
experimental = [
    "datasets>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "ty>=0.0.28",
    "ruff>=0.4",
    "pre-commit>=4.0",
    "maturin>=1.7",
]
all = [
    "mm-ctx[mlx]; sys_platform == 'darwin'",
]

[tool.maturin]
python-source = "python"
module-name = "mm._mm"
manifest-path = "crates/mm-python/Cargo.toml"
features = ["pyo3/extension-module"]
# Wheel: .py, .pyi, .yaml (pipelines), py.typed, compiled .so/.pyd, and dist-info.
# Maturin auto-discovers .py/.pyi from python-source; YAMLs need explicit include.
# Exclude blocks all other file types from leaking into the wheel.
include = [
    { path = "python/mm/pipelines/**/*.yaml", format = ["wheel"] },
]
exclude = [
    "python/mm/**/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
markers = [
    "integration: slow integration tests that need external services (deselect with '-m not integration')",
    "slow: resource-intensive tests such as pytest-benchmark suites (deselect with '-m not slow')",
    "perf: runtime budget / regression guard tests (run with '-m perf')",
]
# Default CI run executes only the fast tier. Run the full suite with
# `pytest -m ''` or `make test-python-full`.
addopts = "-m 'not integration and not slow'"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
# Start with warnings for gradual adoption
possibly-missing-attribute = "warn"
unresolved-import = "warn"
