[package]
name = "mm-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arrow = { workspace = true }
parquet = { workspace = true }
rayon = { workspace = true }
ignore = { workspace = true }
mime_guess = { workspace = true }
infer = { workspace = true }
xxhash-rust = { workspace = true }
image = { workspace = true }
kamadak-exif = { workspace = true }
compact_str = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
memmap2 = { workspace = true }
mp4parse = { workspace = true }
matroska = { workspace = true }
rustdct = { workspace = true }
symphonia = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "l0_walk"
harness = false

[[bench]]
name = "l0_index"
harness = false

[[bench]]
name = "hash_strategies"
harness = false

[[bench]]
name = "l1_extract"
harness = false

[[bench]]
name = "hash_extended"
harness = false
