[package]
name = "mm-python"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "_mm"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true, features = ["abi3-py310"] }
arrow = { workspace = true }
mm-core = { path = "../mm-core" }
compact_str = { workspace = true }
serde_json = { workspace = true }
